src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Service_Tax_Rate__c</fullName>
        <formula>IF( AND((CreatedDate  &lt;    DATETIMEVALUE(&quot;2012-04-01 00:00:01&quot;)),   (ClosedDate  &lt;  DATETIMEVALUE(&quot;2012-04-01 00:00:01&quot;)) ) , 10.36/100,12.36/100)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Tax Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Service_Type__c</fullName>
        <label>Service Type</label>
        <picklist>
            <picklistValues>
                <fullName>LOCAL - ON SITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>U/C - ON SITE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CARRY IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Ship_To_Cust__c</fullName>
        <formula>Account.ShippingStreet + &apos;  &apos; + Account.ShippingCity + &apos;  &apos; + Account.ShippingState + &apos;  &apos; + Account.ShippingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Ship To Cust</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Owner_Id__c</fullName>
        <formula>Service_Engineer_Assigned__r.OwnerId</formula>
        <label>Stock Point Owner Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stock_Point_Type__c</fullName>
        <formula>Service_Engineer_Assigned__r.RecordTypeId</formula>
        <label>Stock Point Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Component_Amount_After_Tax__c</fullName>
        <formula>( Component_Charges__c + Component_Tax_Amount__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Component Amount (After Tax)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Defective_Quantity_Returned__c</fullName>
        <label>Total Defective Quantity Returned</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Quantity_Issued__c</fullName>
        <label>Total Quantity Issued</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Tax_Amount__c</fullName>
        <formula>Component_Tax_Amount__c  + Service_Tax_Amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Tax Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Type_of_Replacement__c</fullName>
        <label>Type of Replacement</label>
        <picklist>
            <controllingField>Type_of_Service_Request__c</controllingField>
            <picklistValues>
                <fullName>Component Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Battery Replacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Replacement</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Service_Request__c</fullName>
        <label>Type of Service Request</label>
        <picklist>
            <controllingField>Warranty_Status__c</controllingField>
            <picklistValues>
                <fullName>Sale of Component</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Card_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Warranty Card Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Warranty_Card__c</fullName>
        <label>Warranty Card</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Warranty_Status__c</fullName>
        <label>Warranty</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>case_person_city__c</fullName>
        <formula>Account.BillingCity</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person city</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_country__c</fullName>
        <formula>Account.BillingCountry</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_state__c</fullName>
        <formula>Account.BillingState</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person state</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_street__c</fullName>
        <formula>Account.BillingStreet</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>case_person_zip__c</fullName>
        <formula>Account.BillingPostalCode</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>case person zip</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>Assigned_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>Service_Engineer_Name__c</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>Service_Engineer_Name__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>Assigned Cases</label>
    </listViews>
    <listViews>
        <fullName>Email_to_Case</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.ORIGIN</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.STATUS</columns>
        <columns>OWNER_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Email to Case</label>
        <sharedTo>
            <group>Admin</group>
            <group>CallAgent1</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <columns>FSR_No__c</columns>
        <columns>NAME</columns>
        <columns>CASES.REASON</columns>
        <columns>Type_of_Service_Request__c</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>OWNER_NAME</columns>
        <columns>Service_Engineer_Assigned__c</columns>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <columns>FSR_No__c</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>NAME</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.REASON</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CASES.CLOSED_DATE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <listViews>
        <fullName>My_New_Cases</fullName>
        <columns>FSR_No__c</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.STATUS</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>My New Cases</label>
    </listViews>
    <listViews>
        <fullName>WEB_Cases</fullName>
        <columns>CASES.CASE_NUMBER</columns>
        <columns>NAME</columns>
        <columns>CASES.SUBJECT</columns>
        <columns>CASES.STATUS</columns>
        <columns>CASES.PRIORITY</columns>
        <columns>CASES.CREATED_DATE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.ORIGIN</field>
            <operation>equals</operation>
            <value>Web</value>
        </filters>
        <label>WEB Cases</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Cash_Mode_Mandate</fullName>
        <active>true</active>
        <description>If Cash Mode of Payment is selected, then Cash Amount and Receiving Date is mandatory</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Payment_Mode__c, &quot;Cash&quot;), 
ISPICKVAL(Status, &quot;Closed&quot;), 
OR( 
ISNULL( Receiving_Date__c ), 
ISNULL( Cash_Amount__c )))</errorConditionFormula>
        <errorMessage>Please put in Information regarding Cash Amount &amp; Receiving Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Cheque_Mode_Payment</fullName>
        <active>true</active>
        <description>If Cheque Mode of Payment is selected, then Bank Name, Cheque No. and Cheque Amount and Receiving Date is mandatory</description>
        <errorConditionFormula>AND (
ISPICKVAL( Payment_Mode__c, &quot;Cheque&quot;),
ISPICKVAL(Status, &quot;Closed&quot;), 
OR(
ISNULL( Receiving_Date__c ),
(Bank_Name__c = &quot;&quot;),
ISNULL( Cheque_Amount__c  )))</errorConditionFormula>
        <errorMessage>Please put in values in Bank Name, Cheque No. and Cheque Amount and Receiving Date fields</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Closed_Case_not_Editable</fullName>
        <active>true</active>
        <errorConditionFormula>AND ((Close_Case__c  = TRUE) , NOT ($Profile.Id = &quot;00e20000000qWVq&quot;))</errorConditionFormula>
        <errorMessage>Once a case is closed, you will no longer be able to make changes to it. Please contact your System Administrator to have this case reopened if additional changes are necessary.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FOC_Close_Case_on_Rejection</fullName>
        <active>true</active>
        <errorConditionFormula>AND (
ISPICKVAL(Status,  &quot;Closed&quot;),
ISPICKVAL( Type_of_Service_Request__c , &quot;FOC&quot;),
ISPICKVAL(Approval_Request_Status__c , &quot;Rejected&quot;)
)</errorConditionFormula>
        <errorMessage>This is a FOC Case which needs to have approval before it is Closed. Kindly contact your Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FOC_Close_Case_without_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL( Type_of_Service_Request__c , &quot;FOC&quot;), 
ISPICKVAL(Approval_Request_Status__c , &quot;&quot;) 
)</errorConditionFormula>
        <errorMessage>This is a FOC Case which needs to have approval before it is Closed. Please Submit for Approval.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FOC_Warranty_Defective_Parts_Returned</fullName>
        <active>true</active>
        <description>In case of FOC / Warranty requests, the Service Engineer needs to  submit all the Defective Parts Returned by the Customer. &quot;Total Quantity Issued&quot; = &quot;Total Defective Quantity Returned&quot;</description>
        <errorConditionFormula>AND ( 
NOT ($Profile.Id = &quot;00e20000000qWVq&quot;),
ISPICKVAL(Status, &quot;Closed&quot;),  
(Total_Quantity_Issued__c  &lt;&gt;  Total_Defective_Quantity_Returned__c ),
OR( 
ISPICKVAL(  Type_of_Service_Request__c  , &quot;FOC&quot;), 
ISPICKVAL(  Type_of_Service_Request__c  , &quot;Warranty&quot;))
)</errorConditionFormula>
        <errorMessage>Please ensure that the Service Engineer has submitted all the Defective Parts Returned by the Customer. &quot;Total Quantity Issued&quot; = &quot;Total Defective Quantity Returned&quot;. Contact your administrator for any exceptions</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Grand_Total_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>Grand_Total__c &lt; 0</errorConditionFormula>
        <errorDisplayField>Service_Charges_Other__c</errorDisplayField>
        <errorMessage>Invalid charges entered. Kindly recheck and update the Service Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_for_FOC</fullName>
        <active>true</active>
        <description>Ensure that the user puts in the &apos;Estimated Value of Service Request&apos; for FOC</description>
        <errorConditionFormula>AND (
ISPICKVAL(  Type_of_Service_Request__c  , &quot;FOC&quot;),
ISPICKVAL( Estimated_Value_of_Service_Request__c , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Estimated_Value_of_Service_Request__c</errorDisplayField>
        <errorMessage>Select Value for &quot;Estimated Value of Service Request&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandate_for_Warranty_Component</fullName>
        <active>true</active>
        <description>Ensure that the user puts in the &apos;Estimated Value of Service Request&apos; for Battery and Product Replacement Under Warranty</description>
        <errorConditionFormula>AND (
ISPICKVAL( Estimated_Value_of_Service_Request__c , &quot;&quot;),
OR(
ISPICKVAL(   Type_of_Replacement__c  , &quot;Product Replacement&quot;),
ISPICKVAL(   Type_of_Replacement__c  , &quot;Battery Replacement&quot;))

)</errorConditionFormula>
        <errorDisplayField>Estimated_Value_of_Service_Request__c</errorDisplayField>
        <errorMessage>Select Value for &quot;Estimated Value of Service Request&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Comp_Bill_No</fullName>
        <active>true</active>
        <description>Component Bill no. is mandatory for all SALE OF COMPONENT cases</description>
        <errorConditionFormula>AND ( 
ISPICKVAL( Type_of_Service_Request__c , &quot;Sale of Component&quot;), 
( Component_Bill_No__c = &quot;&quot;))</errorConditionFormula>
        <errorDisplayField>Component_Bill_No__c</errorDisplayField>
        <errorMessage>Component Bill no. field is mandatory for all SALE OF COMPONENT cases</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mandatory_Serv_Bill_No</fullName>
        <active>false</active>
        <description>Service Bill no. is mandatory when &quot;Type of Service Request&quot; = 
1. Sale of Component
2. Others</description>
        <errorConditionFormula>AND ( 
(Service_Bill_No__c  = &quot;&quot;),
ISPICKVAL(    Warranty_Status__c  , &quot;No&quot;), 
OR(
ISPICKVAL(   Type_of_Service_Request__c   , &quot;Sale of Component&quot;), 
ISPICKVAL(  Type_of_Service_Request__c   , &quot;Others&quot;)))</errorConditionFormula>
        <errorDisplayField>Service_Bill_No__c</errorDisplayField>
        <errorMessage>Service Bill no. field is mandatory for cases, where type of Service Request is &apos;OTHERS&apos; or &apos;SALE OF COMPONENT&apos;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Mode_of_Payment_Mandatory</fullName>
        <active>true</active>
        <description>In case the Grand Total Field is greater than 0, then select the Mode of Payment</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL( Payment_Mode__c , &quot;&quot;), 
(  Grand_Total__c   &gt;   0)
)</errorConditionFormula>
        <errorDisplayField>Payment_Mode__c</errorDisplayField>
        <errorMessage>Please select Payment Mode</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Service_Charges_for_InWarranty_Cases</fullName>
        <active>true</active>
        <description>If the Customer is under warranty then there can be no Service Charges</description>
        <errorConditionFormula>AND (
ISPICKVAL (Warranty_Status__c , &quot;Yes&quot;),
OR(
ISPICKVAL( Service_Charge_Type__c , &quot;Carry In&quot;),
ISPICKVAL( Service_Charge_Type__c , &quot;On Site&quot;),
ISPICKVAL( Service_Charge_Type__c , &quot;Visit&quot;))
)</errorConditionFormula>
        <errorDisplayField>Service_Charge_Type__c</errorDisplayField>
        <errorMessage>If the Customer is under warranty then there can be no Service Charges. Please check</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Owner_of_Record_cannot_be_Role_CEO</fullName>
        <active>true</active>
        <errorConditionFormula>AND( !ISPICKVAL(Origin,&apos;Email&apos;), OR(
(OwnerId  = &quot;00520000000qStb&quot;),
(OwnerId  = &quot;00520000000qk8X&quot;),
(OwnerId  = &quot;00520000000qk8Y&quot;),
(OwnerId  = &quot;00520000000qk8W&quot;)))</errorConditionFormula>
        <errorDisplayField>OwnerId</errorDisplayField>
        <errorMessage>Please transfer the record to the appropriate user</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Sale_of_Component_Charges</fullName>
        <active>true</active>
        <description>In case of Sale of Component, the Component Charges are mandatory</description>
        <errorConditionFormula>AND (
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL(Type_of_Service_Request__c , &quot;Sale of Component&quot;), 
OR (
(Component_Charges__c   &lt;=   0), 
ISNULL(Component_Charges__c ) )
)</errorConditionFormula>
        <errorMessage>Please add Items through &quot;Component Used in Service Request&quot; related list</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Charge_Other_Mandatory</fullName>
        <active>true</active>
        <description>Service Charge (Other) field is Mandatory in case the Type of Service Request is Installation Request</description>
        <errorConditionFormula>AND(
ISPICKVAL( Type_of_Service_Request__c , &quot;Installation Request&quot;), 
OR( 
ISNULL (Service_Charges_Other__c ),
(Service_Charges_Other__c  &lt;= 0)))</errorConditionFormula>
        <errorDisplayField>Service_Charges_Other__c</errorDisplayField>
        <errorMessage>Please put in the Installation Charges in Service Charges (Other)</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Service_Charges_are_Mandatory</fullName>
        <active>false</active>
        <description>In case of Out of Warranty Service Request, Service Charges are mandatory</description>
        <errorConditionFormula>AND(
(Close_Case__c = TRUE),
ISPICKVAL( Service_Charge_Type__c , &quot;&quot;),
NOT (ISPICKVAL( Type_of_Replacement__c , &quot;Component Replacement&quot;)),
OR(
ISPICKVAL(Type_of_Service_Request__c , &quot;Sale of Component&quot;)
))</errorConditionFormula>
        <errorDisplayField>Service_Charge_Type__c</errorDisplayField>
        <errorMessage>Please select appropriate Service Charges</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Type_of_Service_Request_is_Mandatory</fullName>
        <active>true</active>
        <description>Type of Service Request is Mandatory field for all Types of Service Requests</description>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL(  Type_of_Service_Request__c  , &quot;&quot;)
)</errorConditionFormula>
        <errorDisplayField>Type_of_Service_Request__c</errorDisplayField>
        <errorMessage>Select Type of Service Request</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Service_Bill_No</fullName>
        <active>true</active>
        <errorConditionFormula>CONTAINS(Service_Bill_No__c ,&quot;&apos;&quot;)</errorConditionFormula>
        <errorDisplayField>Service_Bill_No__c</errorDisplayField>
        <errorMessage>Kindly don&apos;t enter &apos; (apostrophe) in the Service Bill No</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Service_Engineer_Owner_Id</fullName>
        <active>true</active>
        <errorConditionFormula>Service_Engineer_Assigned__c  &lt;&gt; Null &amp;&amp;  OwnerId &lt;&gt;  Service_Engineer_Assigned__r.OwnerId &amp;&amp;   Service_Engineer_Assigned__r.RecordTypeId = &apos;0122000000093se&apos;</errorConditionFormula>
        <errorDisplayField>Service_Engineer_Assigned__c</errorDisplayField>
        <errorMessage>Service Engineer does not belong to this Service Center. Please choose a valid Service Engineer</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Validate_Stock_Point_Type</fullName>
        <active>true</active>
        <errorConditionFormula>Service_Engineer_Assigned__c &lt;&gt; NULL &amp;&amp;  Stock_Point_Type__c  &lt;&gt; &apos;01290000000NwDa&apos;</errorConditionFormula>
        <errorDisplayField>Service_Engineer_Assigned__c</errorDisplayField>
        <errorMessage>Please choose a valid Service Engineer.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warranty_Close_Case_on_Rejection</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL(Approval_Request_Status__c , &quot;Rejected&quot;) ,
ISPICKVAL( Type_of_Replacement__c , &quot;Product Replacement&quot;)
)</errorConditionFormula>
        <errorMessage>This is a Warranty Case for Product Replacement / Battery Replacement - which needs to have approval before it is Closed. Kindly contact your Administrator</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Warranty_Close_Case_without_Approval</fullName>
        <active>true</active>
        <errorConditionFormula>AND ( 
ISPICKVAL(Status, &quot;Closed&quot;), 
ISPICKVAL(Approval_Request_Status__c , &quot;&quot;) , 
ISPICKVAL( Type_of_Replacement__c , &quot;Product Replacement&quot;)
)</errorConditionFormula>
        <errorMessage>This is a Warranty Case for Product Replacement / Battery Replacement - which needs to have approval before it is Closed. Kindly contact your Administrator</errorMessage>
    </validationRules>
</CustomObject>